--- a/index.html
+++ b/index.html
@@ -3,19 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Node JS</title>
+    <title>Tailwind Project</title>
+    <!-- Google Fonts Link Start -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil:opsz,wght@10..72,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Ponomar&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+    <!-- Google Fonts Link End -->
     <link rel="stylesheet" href="src/output.css">
 </head>
 <body>
-    <div class="max-w-mycontainer m-auto">
-        <p class="leading-7 bg-amber-600">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae perspiciatis laborum facere, possimus repellendus aperiam nihil tempora saepe similique harum?</p>
-    </div>
-    <div class="bg-[url(../Images/gallery-01.jpg)] bg-no-repeat bg-center bg-cover ">
-        <div class="py-[300px] bg-black opacity-65 text-center relative">
-            <h1 class="text-9xl hover:text-sky-700 text-white relative before:absolute before:top-0 before:left-0 before:content-[' '] before:bg-red-600 before:w-[50px] before:h-[8px] inline-block *
-            after:absolute after:bottom-0 after:right-0 after:content-[' '] after:bg-amber-400 after:w-[50px] after:h-[8px] ">RSL</h1>
+<!-- Header Part Start -->
+    <div class="py-8">
+        <div class="max-w-headerContainer m-auto">
+            <div class="flex items-center text-center">
+                <div class="w-[15%]">
+                    <img src="Images/Logo.png" alt="Logo.png" class="w-[100px]">
+                </div>
+                <div class="w-[70%]">
+                    <ul>
+                        <li class="inline-block"><a href="#" class="px-6 font-inter text-menuC font-medium hover:text-primary text-[18px]">Home</a></li>
+                        <li class="inline-block"><a href="#" class="px-6 font-inter text-menuC font-medium hover:text-primary text-[18px]">About</a></li>
+                        <li class="inline-block"><a href="#" class="px-6 font-inter text-menuC font-medium hover:text-primary text-[18px]">Service</a></li>
+                        <li class="inline-block"><a href="#" class="px-6 font-inter text-menuC font-medium hover:text-primary text-[18px]">Blog</a></li>
+                        <li class="inline-block"><a href="#" class="px-6 font-inter text-menuC font-medium hover:text-primary text-[18px]">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="w-[15%]">
+                    <a href="#" class="bg-primary py-3 px-6 rounded-10 text-white font-inter text-[18px] font-medium">Contact Us</a>
+                </div>
+            </div>
         </div>
     </div>
+<!-- Header Part End -->
+<!-- Banner Part Start -->
+    <div class="bg-primary pt-[245px] pb-[175px]">
+        <div class="max-w-headerContainer m-auto">
+            <div class="flex justify-between items-center">
+                <div class="w-[542px] text-white">
+                    <h1 class="font-inter font-bold text-[65px] leading-[80px]">We Are Digital Product Design Agency</h1>
+                    <p class="font-inter text-[16px] pt-8 pb-9 leading-7">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                    <a href="#" class="py-5 px-6 text-primary rounded-10 text-[18px] font-medium font-inter bg-white">Get Started</a>
+                </div>
+                <div>
+                    <img src="Images/Banner Illustration.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+<!-- Banner Part End -->
+
 
 </body>
 </html>
